mermaid: Fix Chrome regression with label overflow hack
These were just showing as scrollbars 🙂‍↔️

--- a/remark/mermaid/style.css
+++ b/remark/mermaid/style.css
@@ -89,6 +89,7 @@ g.node foreignObject.label {
 g.edgeLabel foreignObject,
 g.label foreignObject {
   overflow-x: visible;
+  scrollbar-width: none;
 }
 
 .edgeLabel span.edgeLabel {
